# anndata-metadata

./: .gitignore  README.md  main.py  pyproject.toml
src/anndata_metadata/: extract.py
test/: test_extract.py
